--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mono2micro-masterclass-class01"]
 	path = mono2micro-masterclass-class01
 	url = https://github.com/gpfaltz/mono2micro-masterclass-class01.git
+[submodule "mono2micro-masterclass-class02"]
+	path = mono2micro-masterclass-class02
+	url = https://github.com/gpfaltz/mono2micro-masterclass-class02.git
