--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "mono2micro-masterclass-class03"]
 	path = mono2micro-masterclass-class03
 	url = https://github.com/gpfaltz/mono2micro-masterclass-class03.git
+[submodule "mono2micro-masterclass-class04"]
+	path = mono2micro-masterclass-class04
+	url = https://github.com/gpfaltz/mono2micro-masterclass-class04.git
